--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -4,16 +4,6 @@
 <dict>
 	<key>AlternateMouseScroll</key>
 	<true/>
-	<key>AppleAntiAliasingThreshold</key>
-	<integer>1</integer>
-	<key>ApplePressAndHoldEnabled</key>
-	<false/>
-	<key>AppleScrollAnimationEnabled</key>
-	<integer>0</integer>
-	<key>AppleSmoothFixedFontsSizeThreshold</key>
-	<integer>1</integer>
-	<key>AppleWindowTabbingMode</key>
-	<string>manual</string>
 	<key>Custom Color Presets</key>
 	<dict>
 		<key>Nord</key>
@@ -25,7 +15,7 @@
 				<key>Blue Component</key>
 				<real>0.25300124287605286</real>
 				<key>Color Space</key>
-			<string>Calibrated</string>
+				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>0.19692185521125793</real>
 				<key>Red Component</key>
@@ -1039,13 +1029,13 @@
 			<key>Name</key>
 			<string>Default</string>
 			<key>Non Ascii Font</key>
-			<string>InconsolataNerdFontCompleteM-Regular 14</string>
+			<string>CaskaydiaCoveNerdFontComplete- 11</string>
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Non-ASCII Ligatures</key>
 			<true/>
 			<key>Normal Font</key>
-			<string>LetterGothicStd-Bold 15</string>
+			<string>CascadiaCode-Regular 13</string>
 			<key>Option Key Sends</key>
 			<integer>0</integer>
 			<key>Prevent Automatic Profile Switching</key>
@@ -1398,4 +1388,4 @@
 	<key>findMode_iTerm</key>
 	<integer>0</integer>
 </dict>
-</plist>	
+</plist>
